--- a/css/style.css
+++ b/css/style.css
@@ -131,8 +131,6 @@ option {
     flex-grow: 1.5;
     height: 40px;
     background-color: rgb(252, 184, 40);
-    /* color: white; */
-    /* #FEDD6C; */
     color: black;
     border-radius: 5px;
     margin-left: 10px;
@@ -161,10 +159,6 @@ h3>.right {
     font-size: 120%;
 }
 
-.evaluation-entry>a {
-    text-decoration: none;
-}
-
 
 /* Default Department Selection */
 
@@ -182,12 +176,30 @@ h3>.right {
 }
 
 .departments h3 {
-    margin: 40px 0 0 0;
+    margin: 45px 0 0 0;
     width: 100%;
 }
 
 .departments h3:first-of-type {
     margin-top: 0;
+}
+
+.departments li {
+    list-style-type: none;
+}
+
+.departments li[data-localize] {
+    list-style-type: inherit;
+}
+
+.departments li>label {
+    margin-left: -20px;
+    color: #4183c4;
+    font-weight: bolder;
+}
+
+.departments li>label>input {
+    margin-right: 5px;
 }
 
 
@@ -318,6 +330,12 @@ body {
     font-size: 3em;
 }
 
+@media only screen and (max-width: 991px) {
+    .departments {
+        column-count: 1;
+    }
+}
+
 @media only screen and (max-width: 767px) {
     .uw-thinstrip {
         padding: 0;
@@ -356,10 +374,6 @@ body {
     .main {
         display: flex;
         flex-direction: column;
-    }
-    .departments {
-        column-count: 1;
-        /* width: 100%; */
     }
     .departments summary {
         text-overflow: ellipsis;
