--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,17 @@ h3>.right {
     float: right;
 }
 
+summary .right {
+    margin-top: 5px;
+}
+
+summary .right>a {
+    background-color: white;
+    padding: 5px;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
 .right>i {
     margin-top: 30px;
     font-size: 30px;
@@ -334,6 +345,14 @@ body {
     .departments {
         column-count: 1;
     }
+    .main {
+        display: flex;
+        flex-direction: column;
+    }
+    aside {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
 }
 
 @media only screen and (max-width: 767px) {
@@ -371,17 +390,9 @@ body {
         margin-top: 15px;
         font-size: 25px;
     }
-    .main {
-        display: flex;
-        flex-direction: column;
-    }
     .departments summary {
         text-overflow: ellipsis;
         white-space: nowrap;
-    }
-    aside {
-        margin-right: 0;
-        margin-bottom: 10px;
     }
     summary>h2 {
         font-weight: normal;
