--- a/css/style.css
+++ b/css/style.css
@@ -57,8 +57,20 @@ body {
     background-color: var(--background-color);
 }
 
+#dept-filters {
+    margin: 10px 0 20px 0;
+}
+
+#dept-filters>span {
+    font-weight: bold;
+}
+
+#selected-departments {
+    display: inline-block;
+}
+
 .main {
-    margin-top: 30px;
+    margin-top: 15px;
     display: grid;
     grid-template-columns: 20% 80%
 }
@@ -176,7 +188,7 @@ h3>.right {
 }
 
 .departments h3 {
-    margin: 45px 0 0 0;
+    margin: 50px 0 0 0;
     width: 100%;
 }
 
