--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,13 @@ body {
 }
 
 #selected-departments {
-    display: inline-block;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+#selected-departments>div {
+    margin-bottom: 5px;
 }
 
 .main {
